--- a/day33/hw33.html
+++ b/day33/hw33.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="cw30.css">
+    <link rel="stylesheet" href="hw33.css">
 </head>
 <body>
-    
+    <div class="box"></div>
+    <button class="luka"></button>
+    <div class="live"></div>
+    <div class="element"></div>
+    <div element2></div>
 </body>
 </html>
