--- a/day 39/cw39.html
+++ b/day 39/cw39.html
@@ -13,6 +13,7 @@
   Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
   or on your next road trip.</p>
     <img class="img1" src="icon-sedans.svg">
+    <button class="button1">learn more</button>
 
       <div class="card2"></div>
     <div class="card-content2 "></div>
@@ -20,6 +21,7 @@
   Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
   and off-road adventures.</p>
   <img class="img2" src="icon-suvs.svg">
+  <button class="button3">learn more</button>
 
         <div class="card3"></div>
     <div class="card-content3"></div>
@@ -27,6 +29,7 @@
   Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
   rental and arrive in style.</p>
   <img class="img3" src="icon-luxury.svg">
+  <button class="button2">learn more</button>
 
 </body>
 </html>
